SPM: Fix ExtensionViewHost key event not working

The problem is similar to WebDialogView in https://crbug.com/919183
that ExtensionViewHost does return a proper "handled/procssed" flag
for the unhandled key events. The CL makes it to return the flag
from ExtensionView instead of always returning true.

Bug: 920713
Change-Id: I9ee61c0ba5b390e43a20fce38d7393e26fe3d847
Reviewed-on: https://chromium-review.googlesource.com/c/1407196
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Ken Rockot <rockot@google.com>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622513}
Former-commit-id: 29ffac3e6b53c76da1aeeabf1dfcd7570297f163